[package]
name = "shiny-engine"
version = "0.1.0"
authors = ["paradox games"]
edition = "2018"

[dependencies]
wasm-bindgen = "^0.2.71"

[dependencies.web-sys]
version = "^0.3.48"
features = [
    "Attr",
    "CanvasRenderingContext2d",
    "Document",
    "Element",
    "Event",
    "EventTarget",
    "HtmlCanvasElement",
    "HtmlElement",
    "HtmlInputElement",
    "Node",
    "Text",
    "Window"
]

[lib]
crate-type = ["cdylib"]